Loaded in dataset and dropped some columns and rows

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -25,7 +25,9 @@
    "id": "aed50103",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hfsdhfdh"
+   ]
   }
  ],
  "metadata": {
