Added some code for dropping columns rows

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [
@@ -15,8 +15,10 @@
     }
    ],
    "source": [
-    "# Add Truls\n",
-    "print(\"noe\")"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -26,7 +28,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hfsdhfdh"
+    "#Importing data to dataframe\n",
+    "data = pd.read_csv('data.csv')\n",
+    "print(data.head())\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae258767",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Finding number of null values per column, dropping those with more than 5% missing and \n",
+    "nullValues = data.isnull().sum()\n",
+    "print(nullValues)\n",
+    "thresh = round(0.9*data.shape[0])\n",
+    "print(thresh)\n",
+    "data1 = data.dropna(axis=1, thresh=thresh)\n",
+    "data1.isnull().sum()\n",
+    "data1.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74cba889",
+   "metadata": {},
+   "source": [
+    "Some columns have leakage features, meaning they have a 1-1 correlation with what we try to predict.\n",
+    "These need to be removed as they will make the predictions too easy\n",
+    "We also need to decide which of the non-numerical columns to discard even if they aren't leakage features. Simply because they have too diverse values relative to the amount of data.\n",
+    "As an example, the forename of the driver will be too sparse for the model to learn what drivers are reckless, and which aren't. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fd36e5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Remove rows with null values, make sure this is done after we are done dropping columns\n",
+    "data2 = data1.dropna(axis=0, thresh=data1.shape[1])\n",
+    "data2.shape"
    ]
   }
  ],
