(refactor): Change how we remove columns, change text formatting

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b916fece",
+   "metadata": {},
+   "source": [
+    "# **DNF F1 analasys project** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f659846",
+   "metadata": {},
+   "source": [
+    "## Part 1 - Loading and maipulating data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -15,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -23,42 +39,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   resultId  raceId  year  round  grid  positionOrder  points  laps  \\\n",
-      "0      2460     136  2002     13    11              4     3.0  77.0   \n",
-      "1     11565     483  1981      1    23             21     0.0  16.0   \n",
-      "2     18661     772  1958      8     0             26     0.0   0.0   \n",
-      "3     25121    1058  2021      8    19             16     0.0  69.0   \n",
-      "4      8863     383  1988     12     0             30     0.0   0.0   \n",
+      "   resultId  raceId  year  round  grid  positionOrder  points  laps milliseconds fastestLap rank fastestLapTime fastestLapSpeed  driverRef    surname forename         dob nationality_x constructorRef         name nationality_y   circuitRef  circuitId   name_y  location  country      lat      lng  alt        date  target_finish\n",
+      "0      2460     136  2002     13    11              4     3.0  77.0          NaN         \\N   \\N             \\N              \\N  raikkonen  Räikkönen     Kimi  1979-10-17       Finnish        mclaren  Hungaroring       British  hungaroring         11  McLaren  Budapest  Hungary  47.5789  19.2486  264  2002-08-18              1 \n",
       "\n",
-      "  milliseconds fastestLap  ...     circuitRef circuitId        name_y  \\\n",
-      "0          NaN         \\N  ...    hungaroring        11       McLaren   \n",
-      "1           \\N         \\N  ...     long_beach        43       McLaren   \n",
-      "2           \\N         \\N  ...    nurburgring        20      Maserati   \n",
-      "3           \\N         57  ...  red_bull_ring        70  Haas F1 Team   \n",
-      "4           \\N         \\N  ...          monza        14     Euro Brun   \n",
-      "\n",
-      "     location  country      lat        lng  alt        date target_finish  \n",
-      "0    Budapest  Hungary  47.5789   19.24860  264  2002-08-18             1  \n",
-      "1  California      USA  33.7651 -118.18900   12  1981-03-15             0  \n",
-      "2     Nürburg  Germany  50.3356    6.94750  578  1958-08-03             0  \n",
-      "3   Spielberg  Austria  47.2197   14.76470  678  2021-06-27             0  \n",
-      "4       Monza    Italy  45.6156    9.28111  162  1988-09-11             0  \n",
-      "\n",
-      "[5 rows x 31 columns]\n",
-      "(10000, 31)\n"
+      "Shape of daraframe:  (10000, 31)\n"
      ]
     }
    ],
    "source": [
     "#Importing data to dataframe\n",
     "data = pd.read_csv('data.csv')\n",
-    "print(data.head())\n",
-    "print(data.shape)"
+    "print(data.head(1).to_string() ,\"\\n\")\n",
+    "print(\"Shape of daraframe: \", data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "badb676c",
+   "metadata": {},
+   "source": [
+    "As we can see, we have 10 000 rows/cars and 31 columns/features. A lot of these columns have Nan or empty values, we therefore have to remove these to get the desired features that can be used in our models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -97,30 +102,95 @@
       "alt                   0\n",
       "date                  0\n",
       "target_finish         0\n",
-      "dtype: int64\n",
-      "9000\n"
+      "dtype: int64 \n",
+      "\n",
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Finding number of null values per colum\n",
+    "nullValues = data.isnull().sum()\n",
+    "print(nullValues, \"\\n\")\n",
+    "print(len(nullValues))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb7d28f9",
+   "metadata": {},
+   "source": [
+    "We can see there are 4 columns that have 9-10% NAN values, adn the rest have 0 NAN columns. We therefore decide to remove these columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "ecbf502d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "resultId           0\n",
+      "raceId             0\n",
+      "year               0\n",
+      "round              0\n",
+      "grid               0\n",
+      "positionOrder      0\n",
+      "points             0\n",
+      "laps               0\n",
+      "milliseconds       0\n",
+      "fastestLap         0\n",
+      "rank               0\n",
+      "fastestLapTime     0\n",
+      "fastestLapSpeed    0\n",
+      "driverRef          0\n",
+      "surname            0\n",
+      "forename           0\n",
+      "dob                0\n",
+      "nationality_x      0\n",
+      "constructorRef     0\n",
+      "name               0\n",
+      "nationality_y      0\n",
+      "circuitRef         0\n",
+      "circuitId          0\n",
+      "name_y             0\n",
+      "location           0\n",
+      "country            0\n",
+      "lat                0\n",
+      "lng                0\n",
+      "alt                0\n",
+      "date               0\n",
+      "target_finish      0\n",
+      "dtype: int64\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(10000, 30)"
+       "31"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Finding number of null values per column, dropping those with more than 10% missing  \n",
-    "nullValues = data.isnull().sum()\n",
-    "print(nullValues)\n",
-    "thresh = round(0.9*data.shape[0])\n",
-    "print(thresh)\n",
-    "data1 = data.dropna(axis=1, thresh=thresh)\n",
-    "data1.isnull().sum()\n",
-    "data1.shape"
+    "data = data.dropna()\n",
+    "print(data.isnull().sum())\n",
+    "len(data.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "501ca4eb",
+   "metadata": {},
+   "source": [
+    "Now our dataset consists of 31 columns where no columns have NAN values"
    ]
   },
   {
@@ -128,38 +198,16 @@
    "id": "74cba889",
    "metadata": {},
    "source": [
-    "Some columns have leakage features, meaning they have a 1-1 correlation with what we try to predict.\n",
-    "These need to be removed as they will make the predictions too easy\n",
-    "We also need to decide which of the non-numerical columns to discard even if they aren't leakage features. Simply because they have too diverse values relative to the amount of data.\n",
-    "As an example, the forename of the driver will be too sparse for the model to learn what drivers are reckless, and which aren't. "
+    "Some columns have leakage features, meaning the column gives away the answer of what we are trying to predict. These need to be removed as they will make the predictions too easy.\n",
+    "\n",
+    "We also need to decide which of the non-numerical columns to discard even if they are not leakage features. Simply because they have too diverse (sparse) values relative to the amount of data. There is not enoigh data to see a pattern with this many values\n",
+    "\n",
+    "As an example, the first name of the driver will be too sparse for the model to learn what drivers are reckless, and which are not. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1fd36e5f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7399, 30)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Remove rows with null values, make sure this is done after we are done dropping columns\n",
-    "data2 = data1.dropna(axis=0, thresh=data1.shape[1])\n",
-    "data2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "id": "13904c1f",
    "metadata": {},
    "outputs": [
@@ -182,7 +230,7 @@
        "Name: target_finish, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
