(refactor/feat) Remove leakage and NAN/NULL/\N values, made code more effective

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 245,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 246,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -58,12 +58,13 @@
    "id": "badb676c",
    "metadata": {},
    "source": [
-    "As we can see, we have 10 000 rows/cars and 31 columns/features. A lot of these columns have Nan or empty values, we therefore have to remove these to get the desired features that can be used in our models."
+    "As we can see, we have 10 000 rows/cars and 31 columns/features. A lot of these columns have NULL, NAN\n",
+    " or \\N values, we therefore have to remove these to get the desired features that can be used in our models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 247,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -71,62 +72,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resultId              0\n",
-      "raceId                0\n",
-      "year                  0\n",
-      "round                 0\n",
-      "grid                  0\n",
-      "positionOrder         0\n",
-      "points              971\n",
+      "milliseconds       7393\n",
+      "fastestLapSpeed    7191\n",
+      "fastestLap         6895\n",
+      "fastestLapTime     6895\n",
+      "rank               6798\n",
       "laps                978\n",
-      "milliseconds       1018\n",
-      "fastestLap            0\n",
-      "rank                  0\n",
-      "fastestLapTime        0\n",
-      "fastestLapSpeed     953\n",
-      "driverRef             0\n",
-      "surname               0\n",
-      "forename              0\n",
-      "dob                   0\n",
-      "nationality_x         0\n",
-      "constructorRef        0\n",
-      "name                  0\n",
-      "nationality_y         0\n",
+      "points              971\n",
       "circuitRef            0\n",
       "circuitId             0\n",
       "name_y                0\n",
       "location              0\n",
       "country               0\n",
+      "resultId              0\n",
+      "name                  0\n",
       "lat                   0\n",
       "lng                   0\n",
       "alt                   0\n",
       "date                  0\n",
+      "nationality_y         0\n",
+      "forename              0\n",
+      "constructorRef        0\n",
+      "nationality_x         0\n",
+      "dob                   0\n",
+      "raceId                0\n",
+      "surname               0\n",
+      "driverRef             0\n",
+      "positionOrder         0\n",
+      "grid                  0\n",
+      "round                 0\n",
+      "year                  0\n",
       "target_finish         0\n",
-      "dtype: int64 \n",
-      "\n",
-      "31\n"
+      "dtype: int64\n",
+      "Columncount:   31\n"
      ]
     }
    ],
    "source": [
-    "#Finding number of null values per colum\n",
-    "nullValues = data.isnull().sum()\n",
-    "print(nullValues, \"\\n\")\n",
-    "print(len(nullValues))\n",
-    "\n"
+    "\n",
+    "# Count columns that contains either NaN, '\\N' eller 'NULL'\n",
+    "null_counts = (data.isna() | data.eq('\\\\N') | data.eq('NULL')).sum()\n",
+    "\n",
+    "print(null_counts.sort_values(ascending=False))\n",
+    "print(\"Columncount:  \",len(data.columns))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cb7d28f9",
+   "id": "14e22ebd",
    "metadata": {},
    "source": [
-    "We can see there are 4 columns that have 9-10% NAN values, adn the rest have 0 NAN columns. We therefore decide to remove these columns. "
+    "We decide to remove the first 5 since they are leakage columns, meaning they will give our prediction away too easily."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 248,
    "id": "ecbf502d",
    "metadata": {},
    "outputs": [
@@ -134,55 +135,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resultId           0\n",
-      "raceId             0\n",
-      "year               0\n",
-      "round              0\n",
-      "grid               0\n",
-      "positionOrder      0\n",
-      "points             0\n",
-      "laps               0\n",
-      "milliseconds       0\n",
-      "fastestLap         0\n",
-      "rank               0\n",
-      "fastestLapTime     0\n",
-      "fastestLapSpeed    0\n",
-      "driverRef          0\n",
-      "surname            0\n",
-      "forename           0\n",
-      "dob                0\n",
-      "nationality_x      0\n",
-      "constructorRef     0\n",
-      "name               0\n",
-      "nationality_y      0\n",
-      "circuitRef         0\n",
-      "circuitId          0\n",
-      "name_y             0\n",
-      "location           0\n",
-      "country            0\n",
-      "lat                0\n",
-      "lng                0\n",
-      "alt                0\n",
-      "date               0\n",
-      "target_finish      0\n",
-      "dtype: int64\n"
+      "Columncount:   26\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "31"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = data.dropna()\n",
-    "print(data.isnull().sum())\n",
-    "len(data.columns)\n"
+    "leakage_cols = [\n",
+    "    \"milliseconds\",\n",
+    "    \"fastestLapSpeed\",\n",
+    "    \"fastestLap\",\n",
+    "    \"fastestLapTime\",\n",
+    "    \"rank\",\n",
+    "  \n",
+    "]\n",
+    "\n",
+    "data = data.drop(columns=leakage_cols , axis =1)\n",
+    "\n",
+    "print(\"Columncount:  \", len(data.columns))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dea923d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d2bc96e",
+   "metadata": {},
+   "source": [
+    "We want to keep laps and points since they are important columns to keep for our later predictions. We therefore only keep the rows that have points and lap values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43dcb3d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows after cleaning: 8155\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data.dropna(subset=['laps', 'points'])\n",
+    "\n",
+    "print(\"Rows after cleaning:\", len(data))"
    ]
   },
   {
@@ -190,54 +195,27 @@
    "id": "501ca4eb",
    "metadata": {},
    "source": [
-    "Now our dataset consists of 31 columns where no columns have NAN values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "74cba889",
-   "metadata": {},
-   "source": [
-    "Some columns have leakage features, meaning the column gives away the answer of what we are trying to predict. These need to be removed as they will make the predictions too easy.\n",
-    "\n",
-    "We also need to decide which of the non-numerical columns to discard even if they are not leakage features. Simply because they have too diverse (sparse) values relative to the amount of data. There is not enoigh data to see a pattern with this many values\n",
-    "\n",
-    "As an example, the first name of the driver will be too sparse for the model to learn what drivers are reckless, and which are not. "
+    "Now our dataset consists of 26 columns. We need to remove \"target_finish\", as this is what we are trying to predict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "13904c1f",
+   "execution_count": 250,
+   "id": "272bd475",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "target_finish    1.000000\n",
-       "points           0.628731\n",
-       "laps             0.334690\n",
-       "year             0.290462\n",
-       "resultId         0.153426\n",
-       "raceId           0.139581\n",
-       "round            0.132131\n",
-       "lng              0.093242\n",
-       "circuitId       -0.018930\n",
-       "lat             -0.019015\n",
-       "alt             -0.042671\n",
-       "grid            -0.334981\n",
-       "positionOrder   -0.627143\n",
-       "Name: target_finish, dtype: float64"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columncount:   25\n"
+     ]
     }
    ],
    "source": [
-    "data2.describe()\n",
-    "data2.corr(numeric_only=True)['target_finish'].sort_values(ascending=False)"
+    "#Remove target_finish, leading to 30 remaining columns\n",
+    "data = data.drop(\"target_finish\", axis = 1)\n",
+    "print(\"Columncount:  \", len(data.columns))"
    ]
   }
  ],
