(feat): Remove more columns, keeping only the 10 most valuable

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 278,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 279,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 280,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 281,
    "id": "ecbf502d",
    "metadata": {},
    "outputs": [
@@ -155,42 +155,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dea923d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d2bc96e",
-   "metadata": {},
-   "source": [
-    "We want to keep laps and points since they are important columns to keep for our later predictions. We therefore only keep the rows that have points and lap values\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43dcb3d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rows after cleaning: 8155\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = data.dropna(subset=['laps', 'points'])\n",
-    "\n",
-    "print(\"Rows after cleaning:\", len(data))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "501ca4eb",
    "metadata": {},
@@ -200,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 282,
    "id": "272bd475",
    "metadata": {},
    "outputs": [
@@ -213,9 +177,201 @@
     }
    ],
    "source": [
-    "#Remove target_finish, leading to 30 remaining columns\n",
+    "#Remove target_finish, leading to 25 remaining columns\n",
     "data = data.drop(\"target_finish\", axis = 1)\n",
     "print(\"Columncount:  \", len(data.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "id": "5fd52f2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['resultId', 'raceId', 'year', 'round', 'grid', 'positionOrder',\n",
+       "       'points', 'laps', 'driverRef', 'surname', 'forename', 'dob',\n",
+       "       'nationality_x', 'constructorRef', 'name', 'nationality_y',\n",
+       "       'circuitRef', 'circuitId', 'name_y', 'location', 'country', 'lat',\n",
+       "       'lng', 'alt', 'date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19898e5a",
+   "metadata": {},
+   "source": [
+    "We are now left with 25 columns. Let us analyse further what columns are actually beneficial for our dnf prediction:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bcd79d1",
+   "metadata": {},
+   "source": [
+    "✅ Column decisions \n",
+    "\n",
+    "- resultId: **DROP**  – Unique ID, no predictive value\n",
+    "\n",
+    "- raceId: **DROP** – Unique ID, not useful\n",
+    "\n",
+    "- circuitId: **DROP** – Redundant with circuitRef\n",
+    "\n",
+    "**Race metadata**\n",
+    "\n",
+    "- year: **KEEP** – DNF rates vary between seasons\n",
+    "\n",
+    "- round: **KEEP** – Early/late season influences DNF\n",
+    "\n",
+    "- date: **KEEP** – Weather/season patterns\n",
+    "\n",
+    "- country: **KEEP** – Conditions differ across countries\n",
+    "\n",
+    "**Driver & team**\n",
+    "\n",
+    "- driverRef: **KEEP** – Stable driver ID, good for OHE\n",
+    "\n",
+    "- surname: **DROP** – High cardinality, redundant\n",
+    "\n",
+    "- forename: **DROP** – High cardinality, redundant\n",
+    "\n",
+    "- dob: DROP – **Raw date**, weak predictor\n",
+    "\n",
+    "- nationality_x: **DROP** – Weak signal\n",
+    "\n",
+    "- constructorRef: **KEEP** – Team strongly impacts DNF\n",
+    "\n",
+    "- nationality_y: **DROP** – Team nationality irrelevant\n",
+    "\n",
+    "**Performance stats**\n",
+    "\n",
+    "- grid: **KEEP** – Starting position affects crash risk\n",
+    "\n",
+    "- points: **KEEP** – Reflects skill/performance level\n",
+    "\n",
+    "- positionOrder: **DROP** – Leakage (reveals final result)\n",
+    "\n",
+    "- laps: **DROP** – Leakage, low laps = DNF\n",
+    "\n",
+    "**Circuit info**\n",
+    "\n",
+    "- circuitRef: **KEEP** – Tracks differ in DNF probability\n",
+    "\n",
+    "- name: **DROP** – Duplicate of circuitRef\n",
+    "\n",
+    "- name_y: **DROP** – Another duplicate\n",
+    "\n",
+    "- location: **DROP** – Text field, not useful\n",
+    "\n",
+    "**Geographical**\n",
+    "\n",
+    "- lat: **DROP** – Raw coordinate not meaningful\n",
+    "\n",
+    "- lng: **DROP** – Same as above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "id": "dcdeaa74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns kept: ['year', 'round', 'grid', 'points', 'driverRef', 'constructorRef', 'circuitRef', 'country', 'alt', 'date']\n",
+      "New shape: (10000, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "keep_cols = [\n",
+    "    'year', 'round', 'grid', 'points',\n",
+    "    'driverRef', 'constructorRef',\n",
+    "    'circuitRef', 'country', 'alt', 'date',\n",
+    "    'target_finish'\n",
+    "]\n",
+    "\n",
+    "\n",
+    "existing_cols = [c for c in keep_cols if c in data.columns]\n",
+    "\n",
+    "data = data[existing_cols]\n",
+    "\n",
+    "print(\"Columns kept:\", existing_cols)\n",
+    "print(\"New shape:\", data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "id": "7072022f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "points            971\n",
+      "year                0\n",
+      "round               0\n",
+      "grid                0\n",
+      "driverRef           0\n",
+      "constructorRef      0\n",
+      "circuitRef          0\n",
+      "country             0\n",
+      "alt                 0\n",
+      "date                0\n",
+      "dtype: int64\n",
+      "Columncount:   10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count columns that contains either NaN, '\\N' eller 'NULL'\n",
+    "null_counts = (data.isna() | data.eq('\\\\N') | data.eq('NULL')).sum()\n",
+    "\n",
+    "print(null_counts.sort_values(ascending=False))\n",
+    "print(\"Columncount:  \",len(data.columns))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6dcde2e",
+   "metadata": {},
+   "source": [
+    "Let us remove the rows that does not have points."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "id": "59e111c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New shape:  (9029, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data.dropna(subset=['points'])\n",
+    "print(\"New shape: \", data.shape)"
    ]
   }
  ],
