(feat): Add frequency encoding and date encoding, finish datamanipulation

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 357,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 358,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 359,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
    ],
    "source": [
     "\n",
-    "# Count columns that contains either NaN, '\\N' eller 'NULL'\n",
+    "# Count columns that contains either NaN, '\\N' or 'NULL'\n",
     "null_counts = (data.isna() | data.eq('\\\\N') | data.eq('NULL')).sum()\n",
     "\n",
     "print(null_counts.sort_values(ascending=False))\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 360,
    "id": "ecbf502d",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 361,
    "id": "272bd475",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 362,
    "id": "5fd52f2f",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 363,
    "id": "dcdeaa74",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 364,
    "id": "7072022f",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 365,
    "id": "59e111c3",
    "metadata": {},
    "outputs": [
@@ -373,6 +373,290 @@
     "data = data.dropna(subset=['points'])\n",
     "print(\"New shape: \", data.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18fcb3dc",
+   "metadata": {},
+   "source": [
+    "We now have to find out what columns are objects or strings, since our prediction models only can use numbers to interpret the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "id": "b5ff629f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['driverRef', 'constructorRef', 'circuitRef', 'country', 'date']\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_cols = data.select_dtypes(include=['object', 'string']).columns.tolist()\n",
+    "print(string_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "id": "27cb1bf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "driverRef          663\n",
+      "constructorRef     173\n",
+      "circuitRef          77\n",
+      "country             35\n",
+      "date              1125\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ammount of unique values for our string features\n",
+    "unique_counts = data[string_cols].nunique()\n",
+    "print(unique_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e6e61a6",
+   "metadata": {},
+   "source": [
+    "As we can see, using one-hot encoding here will not work since we will get way to many new features - 2073 to be precise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d4a9d54",
+   "metadata": {},
+   "source": [
+    "We can start by turning date into: year, month, day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "id": "1a3fee58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['year', 'round', 'grid', 'points', 'driverRef', 'constructorRef',\n",
+      "       'circuitRef', 'country', 'alt', 'month', 'day'],\n",
+      "      dtype='object')\n",
+      "New shape:  (9029, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['date'] = pd.to_datetime(data['date'])\n",
+    "data['month'] = data['date'].dt.month\n",
+    "data['day'] = data['date'].dt.day\n",
+    "\n",
+    "# DROP date after extracting features\n",
+    "data = data.drop(columns=['date'])\n",
+    "\n",
+    "\n",
+    "print(data.columns)\n",
+    "print(\"New shape: \", data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9bbc9e8",
+   "metadata": {},
+   "source": [
+    "Let us use frequency encoding on the 4 other columns. We will get values between 0-1 based on how often they appear. An example is Hamilton = 1000/9029 = 0.11075423635."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "id": "c5aa39de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical columns: Index(['driverRef', 'constructorRef', 'circuitRef', 'country'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>grid</th>\n",
+       "      <th>points</th>\n",
+       "      <th>driverRef</th>\n",
+       "      <th>constructorRef</th>\n",
+       "      <th>circuitRef</th>\n",
+       "      <th>country</th>\n",
+       "      <th>alt</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.014730</td>\n",
+       "      <td>0.072987</td>\n",
+       "      <td>0.037324</td>\n",
+       "      <td>0.037324</td>\n",
+       "      <td>264</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1981</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.006313</td>\n",
+       "      <td>0.072987</td>\n",
+       "      <td>0.009414</td>\n",
+       "      <td>0.079189</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1958</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000332</td>\n",
+       "      <td>0.016281</td>\n",
+       "      <td>0.035884</td>\n",
+       "      <td>0.072323</td>\n",
+       "      <td>578</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>8</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.001551</td>\n",
+       "      <td>0.014952</td>\n",
+       "      <td>0.033448</td>\n",
+       "      <td>0.034002</td>\n",
+       "      <td>678</td>\n",
+       "      <td>6</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.003987</td>\n",
+       "      <td>0.004098</td>\n",
+       "      <td>0.068668</td>\n",
+       "      <td>0.099568</td>\n",
+       "      <td>162</td>\n",
+       "      <td>9</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  round  grid  points  driverRef  constructorRef  circuitRef   country  \\\n",
+       "0  2002     13    11     3.0   0.014730        0.072987    0.037324  0.037324   \n",
+       "1  1981      1    23     0.0   0.006313        0.072987    0.009414  0.079189   \n",
+       "2  1958      8     0     0.0   0.000332        0.016281    0.035884  0.072323   \n",
+       "3  2021      8    19     0.0   0.001551        0.014952    0.033448  0.034002   \n",
+       "4  1988     12     0     0.0   0.003987        0.004098    0.068668  0.099568   \n",
+       "\n",
+       "   alt  month  day  \n",
+       "0  264      8   18  \n",
+       "1   12      3   15  \n",
+       "2  578      8    3  \n",
+       "3  678      6   27  \n",
+       "4  162      9   11  "
+      ]
+     },
+     "execution_count": 369,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Finn alle kategoriske kolonner (object)\n",
+    "cat_cols = data.select_dtypes(include=['object']).columns\n",
+    "print(\"Categorical columns:\", cat_cols)\n",
+    "\n",
+    "# Frequency encode each column\n",
+    "for col in cat_cols:\n",
+    "    freq = data[col].value_counts(normalize=True)   # normalized frequency\n",
+    "    data[col] = data[col].map(freq)\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a13754d",
+   "metadata": {},
+   "source": [
+    "LETS GO! Our dataset is finished and we can now move onto part 2, training our models!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "724f19fb",
+   "metadata": {},
+   "source": [
+    "## Part 2 - Loading and maipulating data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721e3fe6",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
